--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ href=jqueryui/css/smoothness/jquery-ui-1.8.16.custom.css />
 <li><a href=#tab2>Tab 2</a></li>
 <li><a href=#tab3>Tab 3</a></li>
 </ul>
-<div id=tab1>Contents of first tab</div>
+<div id=tab1>https://github.com/monadicact/backbone-todos-example/blob/fa6fe746ab22bc455be594a6444fe628f3b4cdee/venter1.hs#L47-L59</div>
 <div id=tab2>Contents of the second tab</div>
 <div id=tab3>Contents of the third tab</div>
 </div>
